--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Pixabay image search</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Example title</h1>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="search-container">
+      <form class="search-form" id="search-form">
+        <input type="text" name="searchQuery" autocomplete="off" />
+        <button
+          class="search-btn material-symbols-outlined"
+          type="submit"
+          name="submitBtn"
+        >
+          search
+        </button>
+      </form>
+    </div>
+
+    <div class="gallery"></div>
+    <div class="btn-container">
+      <button type="button" class="load-more material-symbols-outlined">
+        more_horiz
+      </button>
+      <button type="button" class="close-btn material-symbols-outlined">
+        close
+      </button>
+    </div>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
